<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="url">URL</string>
    <string name="act_send">Generate password</string>
    <string name="http" translatable="false">http://</string>
    <string name="profile_protocol">Protocol</string>
    <string name="profile_subdomain">Subdomain</string>
    <string name="profile_domain">Domain</string>
    <string name="profile_port">Port, path, anchor, query parameters</string>
    <string name="profile_hash_algorithm">Hash Algorithm</string>
    <string name="profile_name_label">Profile Name</string>
    <string name="profile_url_components_label">Url components</string>
    <string name="custom_symbols">custom</string>
    <string name="custom_symbols_hint">Custom character set</string>
    <string name="keep_password">Keeping password for </string>
    <string name="do_not_keep_password">Do not keep password</string>
    <string name="minutes">more minutes</string>

    <string-array name="hash_algorithms_string_array" translatable="false">
        <item>MD4</item>
        <item>MD5</item>
        <item>SHA1</item>
        <item>SHA256</item>
        <item>RIPEMD160</item>
    </string-array>

    <string name="top_domains">Join special domains (e.g. co.uk)</string>
    <string name="advanced_options">Advanced options</string>
    <string name="label_password_length">Password length</string>
    <string name="label_pass_characters">Password Characters</string>
    <string name="cb_pass_characters_lowercase">lowercase</string>
    <string name="cb_pass_characters_uppercase">uppercase</string>
    <string name="cb_pass_characters_number">numbers</string>
    <string name="cb_pass_characters_symbols">symbols</string>
    <string name="text_show_password_hint">Show password</string>
    <string name="buttonCopy">Copy</string>
    <string name="buttonGo">Go</string>
    <string name="buttonProfiles">Profiles</string>
    <string name="buttonSave">Save</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonNewProfile">Add</string>
    <string name="buttonCancelProfile">Cancel</string>
    <string name="profile">Profile</string>
    <string name="password_copy_to_clipboard">Password copied to clipboard</string>
    <string name="enter_profile_name">Enter profile name</string>
    <string name="new_profile">New Profile</string>
    <string name="toast_profile_created">profile created</string>
    <string name="hmac">HMAC</string>
    <string name="about">Feedback</string>
    <string name="feedback_text_body">This is the feedback for the Even Better Pass Maker app:\n\n</string>
    <string name="send_email_chooser">Send email&#8230;</string>
    <string name="enter_master_pass">Enter master password</string>

</resources>
