<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewDetailProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_label"
            android:layout_margin="4dp"
            style="?android:attr/listSeparatorTextViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spProfiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <Button
                android:id="@+id/btAddProfile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonNewProfile" />

        </LinearLayout>

        <TextView
            android:id="@+id/lbUrlComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_url_components_label"
            android:layout_margin="4dp"
            style="?android:attr/listSeparatorTextViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/cb_url_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_protocol"
                />

            <CheckBox
                android:id="@+id/cb_url_subdomain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_subdomain"
                />

            <CheckBox
                android:id="@+id/cb_url_domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_domain"
                />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_url_port"
            android:layout_width="wrap_content"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_port" />

        <TextView
            android:id="@+id/lbHashAlgorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_hash_algorithm"
            android:layout_margin="4dp"
            style="?android:attr/listSeparatorTextViewStyle" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/sp_hash_alg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/hash_algorithms_string_array" />

            <CheckBox
                android:id="@+id/cb_isHMAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hmac" />
        </LinearLayout>

        <TextView
            android:id="@+id/lbPasswordLenght"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            style="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/label_password_length" />

        <EditText
            android:id="@+id/etPassLenght"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="4dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/lbPasswordCharacters"
            android:layout_margin="4dp"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_pass_characters" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/cb_char_upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_pass_characters_uppercase" />

            <CheckBox
                android:id="@+id/cb_char_lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_pass_characters_lowercase" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/cb_char_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_pass_characters_number" />

            <CheckBox
                android:id="@+id/cb_char_symbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_pass_characters_symbols" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:ellipsize="end"
            android:layout_height="wrap_content" >
            <CheckBox
                android:id="@+id/cb_custom_symbols_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_symbols"  />

            <EditText
                android:id="@+id/et_custom_symbols_input"
                android:layout_width="match_parent"
                android:hint="@string/custom_symbols_hint"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            style="?android:attr/listSeparatorTextViewStyle"
            android:text="@string/advanced_options" />


        <CheckBox
            android:id="@+id/cb_top_domains"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_domains" />

    </LinearLayout>
</ScrollView>
