<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

        <item
            android:id="@+id/actionBtnCopy"
            android:title="@string/buttonCopy"
            yourapp:showAsAction="ifRoom">
        </item>
        <item
            android:id="@+id/actionBtnGo"
            android:title="@string/buttonGo"
            yourapp:showAsAction="ifRoom">
        </item>
        <item
            android:id="@+id/actionBtnProfiles"
            android:title="@string/buttonProfiles"
            yourapp:showAsAction="collapseActionView">
        </item>
        <!-- <item -->
        <!--     android:id="@+id/actionBtnAbout" -->
        <!--     android:title="@string/buttonAbout" -->
        <!--     android:showAsAction="collapseActionView"> -->
        <!--     <menu> -->
        <!--         <item android:id="@+id/item1" android:title="License"/> -->
        <!--         <item android:id="@+id/item2" android:title="Developer"/> -->
        <!--     </menu> -->
        <!-- </item> -->

</menu>
