<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labelProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/profile"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spProfiles"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="6dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labelURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/url"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/etURL"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:inputType="textUri"
                android:text="@string/http"
                />

        </LinearLayout>


        <org.michaelevans.chromahashview.ChromaHashView
            android:id="@+id/etMasterPass"
            android:layout_width="fill_parent"
            android:paddingTop="16dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_master_pass"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tvResultPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/text_show_password_hint"
            android:paddingBottom="10dp"
            android:paddingTop="16dp"
            android:textIsSelectable="false"
            android:textSize="30sp" />

    </LinearLayout>

</ScrollView>
